# consortium

./: ChangeLog  HACKING  README  README.md  aclocal.m4
consortium-1.0/: MAINTAINERS  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in
consortium-1.0.2/: configure  configure.in
consortium-1.0.2/debian/: changelog  consortium-common.install  consortium-common.sgmlcatalogs  consortium.1  consortium.prerm
consortium-1.0.2/doc/creating_themes/: Makefile.am
consortium-1.0.2/doc/man/: Makefile.am  consortium-message.1
consortium-1.0.2/po/: POTFILES.in  bs.po  cy.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  fi.po  fr.po  ga.po  ha.po  hi.po  hr.po  hu.po  hy.po  ig.po  kn.po  ko.po  mai.po  mg.po  mk.po  ml.po  ms.po  oc.po  or.po  pt.po  pt_BR.po  tr.po  vi.po  zh_HK.po
consortium-1.0.2/src/: 50-consortium-windows.xml.in
consortium-1.0.2/src/core/: atomnames.h  bell.c  bell.h  boxes.c  consortium-Xatomtype.h  constraints.c  errors.c  group-private.h  group.c  keybindings.c  place.c  util.c  window.c
consortium-1.0.2/src/include/: errors.h  tabpopup.h  ui.h  util.h
consortium-1.0.2/src/themes/: Makefile.in
consortium-1.0.2/src/themes/Atlanta/: consortium-theme-1.xml
consortium-1.0.2/src/themes/Bright/: consortium-theme-2.xml
consortium-1.0.2/src/themes/Crux/: consortium-theme-2.xml
consortium-1.0.2/src/ui/: fixedtip.c  gradient.h  metaaccellabel.c  metaaccellabel.h  preview-widget.c  preview-widget.h  tile-preview.c
consortium-1.0/.pc/: applied-patches
consortium-1.0/.pc/01_focus_new_window.patch/src/core/: window.c
consortium-1.0/.pc/10_leak.patch/src/core/: display.c
consortium-1.0/.pc/11_remove_thumbnails.patch/src/core/: screen.c
consortium-1.0/.pc/12_icons_96px.patch/src/core/: screen.c
consortium-1.0/.pc/12_icons_96px.patch/src/include/: common.h
consortium-1.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
consortium-1.0/debian/: README.Debian  changelog  consortium-common.catalog  consortium-message.1  consortium-theme-viewer.1  consortium.postinst  control  control.in  rules
consortium-1.0/debian/patches/: 03_gtop_error.patch  10_leak.patch  11_remove_thumbnails.patch  12_icons_96px.patch
consortium-1.0/doc/: Makefile.in  code-overview.txt  consortium-theme.dtd  how-to-get-focus-right.txt
consortium-1.0/doc/creating_themes/: Makefile.in
consortium-1.0/doc/creating_themes/C/: creating-consortium-themes.xml
consortium-1.0/doc/creating_themes/de/: creating-consortium-themes.xml  de.po
consortium-1.0/doc/man/: Makefile.in  consortium.1
consortium-1.0/po/: ChangeLog  am.po  ast.po  be.po  bg.po  br.po  ca.po  ca@valencia.po  crh.po  da.po  et.po  gl.po  gu.po  id.po  it.po  ja.po  ka.po  ku.po  la.po  lt.po  lv.po  mr.po  nb.po  nds.po  nl.po  nn.po  pa.po  ro.po  ru.po  rw.po  si.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  te.po  th.po  tk.po  uk.po  (+3 more)
consortium-1.0/src/: 50-consortium-system.xml.in  Makefile.am  Makefile.in  consortium-schemas.convert  consortium.desktop  libconsortium-private.pc.in  org.consort.consortium.gschema.xml.in
consortium-1.0/src/compositor/: compositor-xrender.c
consortium-1.0/src/core/: boxes.c  constraints.c  constraints.h  core.c  display-private.h  display.c  effects.c  eventqueue.c  eventqueue.h  frame-private.h  frame.c  iconcache.h  keybindings.c  main.c  place.h  prefs.c  screen-private.h  screen.c  session.c  testboxes.c  window-private.h  window-props.c  window.c  workspace.c  xprops.c
consortium-1.0/src/include/: common.h  core.h  prefs.h  resizepopup.h  ui.h  xprops.h
consortium-1.0/src/themes/: Makefile.am  Makefile.in
consortium-1.0/src/themes/AgingGorilla/: consortium-theme-1.xml
consortium-1.0/src/themes/Crux/: consortium-theme-1.xml
consortium-1.0/src/themes/Esco/: consortium-theme-1.xml
consortium-1.0/src/tools/: Makefile.am  Makefile.in  consortium-mag.c  consortium-message.c  consortium-window-demo.c
consortium-1.0/src/ui/: draw-workspace.c  draw-workspace.h  fixedtip.c  frames.c  frames.h  menu.c  menu.h  preview-widget.c  preview-widget.h  resizepopup.c  tabpopup.c  testgradient.c  theme-parser.c  theme-parser.h  theme-viewer.c  theme.c  theme.h  themewidget.c  themewidget.h  ui.c
consortium-1.0/src/wm-tester/: Makefile.am  Makefile.in
debian/: changelog  consortium-common.manpages  copyright  libconsortium-private0a.lintian-overrides  rules  watch
doc/: Makefile.am  theme-format.txt
doc/man/: consortium-window-demo.1
po/: POTFILES.skip  ar.po  as.po  az.po  be@latin.po  bn.po  bn_IN.po  cs.po  de.po  eo.po  es.po  eu.po  fa.po  he.po  is.po  mn.po  ne.po  pl.po  sq.po  ta.po  ug.po  wa.po  zh_TW.po
src/: 50-consortium-navigation.xml.in  Makefile.am  consortium-wm.desktop  consortium-wm.desktop.in  consortium.desktop.in  inlinepixbufs.h
src/compositor/: compositor-xrender.c
src/core/: atomnames.h  core.c  delete.c  display-private.h  display.c  frame.c  group.h  iconcache.c  keybindings.c  prefs.c  screen.c  testasyncgetprop.c  window-private.h  window.c
src/include/: boxes.h  main.h  prefs.h
src/themes/Bright/: consortium-theme-1.xml
src/themes/Metabox/: consortium-theme-1.xml
src/themes/Simple/: consortium-theme-1.xml
src/tools/: Makefile.in
src/ui/: fixedtip.h  gradient.c
src/wm-tester/: Makefile.in
